--- a/pom.xml
+++ b/pom.xml
@@ -37,6 +37,13 @@
 			<artifactId>json-simple</artifactId>
 			<version>1.1.1</version>
 		</dependency>
+		<dependency>
+		    <groupId>org.testng</groupId>
+		    <artifactId>testng</artifactId>
+		    <version>7.5</version>
+		    <scope>test</scope>
+		</dependency>
+
 	</dependencies>
 
 	<build>
