--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -28,3 +28,12 @@ jobs:
     - name: Publish Test Report
       if: ${{ always() }}
       uses: scacap/action-surefire-report@v1
+    
+    - name: Test Report
+      uses: dorny/test-reporter@v1
+      if: success() || failure()    # run this step even if previous step failed
+      with:
+        name: TestNg Tests            # Name of the check run which will be created
+        path: target/surefire-reports/junitreports/*.xml    # Path to test results
+        reporter: java-junit        # Format of test results
+      
