--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,3 +37,8 @@ jobs:
         path: target/surefire-reports/junitreports/*.xml    # Path to test results
         reporter: java-junit        # Format of test results
       
+    - name: Publish Unit Test Results
+      uses: EnricoMi/publish-unit-test-result-action/composite@v1
+      if: always()
+      with:
+          files: "test-results/**/*.xml"
