--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -41,4 +41,4 @@ jobs:
       uses: EnricoMi/publish-unit-test-result-action/composite@v1
       if: always()
       with:
-          files: "test-results/**/*.xml"
+          files: "target/surefire-reports/junitreports/*.xml"
