--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -42,3 +42,11 @@ jobs:
       if: always()
       with:
           files: "target/surefire-reports/junitreports/*.xml"
+          
+    - name: Test Report dorny1
+      uses: dorny/test-reporter@v1
+      if: success() || failure()    # run this step even if previous step failed
+      with:
+        name: TestNg Test Result1            # Name of the check run which will be created
+        path: target/surefire-reports/testng-results.xml    # Path to test results
+        reporter: java-junit        # Format of test results
