--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -37,10 +37,10 @@ jobs:
       with:
           files: "target/surefire-reports/junitreports/*.xml"
           
-    - name: Test Report dorny2
+    - name: Test Report dorny
       uses: dorny/test-reporter@v1
       if: success() || failure()    # run this step even if previous step failed
       with:
-        name: TestNg Test Result2            # Name of the check run which will be created
-        path: target/surefire-reports/testng-results.xml    # Path to test results
+        name: TestNg Test Result            # Name of the check run which will be created
+        path: target/surefire-reports/junitreports/*.xml    # Path to test results
         reporter: java-junit        # Format of test results
