--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,16 @@
 		    <version>7.5</version>
 		    <scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>io.qameta.allure</groupId>
+            <artifactId>allure-testng</artifactId>
+            <version>2.13.9</version>
+        </dependency>
+		<dependency>
+		    <groupId>io.qameta.allure</groupId>
+		    <artifactId>allure-maven</artifactId>
+		    <version>2.8</version>
+		</dependency>
 
 	</dependencies>
 
