--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -45,12 +45,12 @@ jobs:
         path: target/surefire-reports/junitreports/*.xml    # Path to test results
         reporter: java-junit        # Format of test results
         
-    - name: Test marketplace action
+    - name: Allure Reporter
       uses: simple-elf/allure-report-action@master
       if: always()
       id: allure-report
       with:
-          allure_results: build/allure-results
+          allure_results: allure-results
           gh_pages: gh-pages
           allure_report: allure-report
           allure_history: allure-history
@@ -71,4 +71,4 @@ jobs:
         context: 'Test report'
         state: 'success'
         sha: ${{ github.event.pull_request.head.sha }}
-        target_url: simple-elf.github.io/github-allure-history/${{ github.run_number }}
+        target_url: github.com/mathewkuruvila/GithubActions/${{ github.run_number }}
