--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,30 +47,28 @@ jobs:
         path: target/surefire-reports/junitreports/*.xml    # Path to test results
         reporter: java-junit        # Format of test results
         
-    - name: Test marketplace action
+     - name: Get Allure history
+      uses: actions/checkout@v2
+      if: always()
+      continue-on-error: true
+      with:
+        ref: gh-pages
+        path: gh-pages
+
+    - name: Allure Report action from marketplace
       uses: simple-elf/allure-report-action@master
       if: always()
       id: allure-report
       with:
-        allure_results: allure-results
+        allure_results: target/allure-results
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
-        
+
     - name: Deploy report to Github Pages
       if: always()
       uses: peaceiris/actions-gh-pages@v2
       env:
-       PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-       PUBLISH_BRANCH: gh-pages
-       PUBLISH_DIR: allure-history
-       
-    - name: Post the link to the report
-      if: always()
-      uses: Sibz/github-status-action@v1
-      with: 
-        authToken: ${{secrets.GITHUB_TOKEN}}
-        context: 'Test report'
-        state: 'success'
-        sha: ${{ github.event.pull_request.head.sha }}
-        target_url: github.com/mathewkuruvila/GithubActions/${{ github.run_number }}
+        PERSONAL_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        PUBLISH_BRANCH: gh-pages
+        PUBLISH_DIR: allure-history
