--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -47,7 +47,7 @@ jobs:
         path: target/surefire-reports/junitreports/*.xml    # Path to test results
         reporter: java-junit        # Format of test results
         
-     - name: Get Allure history
+    - name: Get Allure history
       uses: actions/checkout@v2
       if: always()
       continue-on-error: true
@@ -60,7 +60,7 @@ jobs:
       if: always()
       id: allure-report
       with:
-        allure_results: target/allure-results
+        allure_results: allure-results
         gh_pages: gh-pages
         allure_report: allure-report
         allure_history: allure-history
