--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -26,6 +26,7 @@ jobs:
         cache: maven
         
     - name: Cache local Maven repository
+      id: cache-maven
       uses: actions/cache@v3
       with:
         path: ~/.m2/repository
@@ -33,6 +34,10 @@ jobs:
         restore-keys: |
           ${{ runner.os }}-maven-
           
+    - name: Install Maven Dependency
+      if: steps.cache-maven.outputs.cache-hit != 'true'
+      run: mvn install 
+      
     - name: Build with Maven
       run: mvn test
       
