--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -36,7 +36,7 @@ jobs:
           
     - name: Install Maven Dependency
       if: steps.cache-maven.outputs.cache-hit != 'true'
-      run: mvn install 
+      run: mvn compile
       
     - name: Build with Maven
       run: mvn test
